tests/ui/async-await/return-type-notation/issue-110963-early.next.stderr
warning: the feature `return_type_notation` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-110963-early.rs:6:12
   |
LL | #![feature(return_type_notation)]
   |            ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #109417 <https://github.com/rust-lang/rust/issues/109417> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0308]: mismatched types
  --> $DIR/issue-110963-early.rs:17:5
   |
LL | /     spawn(async move {
LL | |         let mut hc = hc;
LL | |         if !hc.check().await {
LL | |             log_health_check_failure().await;
LL | |         }
LL | |     });
   | |______^ one type is more general than the other
   |
   = note: expected trait `Send`
              found trait `for<'a> Send`
note: the lifetime requirement is introduced here
  --> $DIR/issue-110963-early.rs:37:17
   |
LL |     F: Future + Send + 'static,
   |                 ^^^^

error[E0308]: mismatched types
  --> $DIR/issue-110963-early.rs:17:5
   |
LL | /     spawn(async move {
LL | |         let mut hc = hc;
LL | |         if !hc.check().await {
LL | |             log_health_check_failure().await;
LL | |         }
LL | |     });
   | |______^ one type is more general than the other
   |
   = note: expected trait `Send`
              found trait `for<'a> Send`
note: the lifetime requirement is introduced here
  --> $DIR/issue-110963-early.rs:37:17
   |
LL |     F: Future + Send + 'static,
   |                 ^^^^

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0308`.
